2001-12-10  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R: unclassed the logLik component of an lme summary before
	trying to put it into a data frame for printing.	

2001-12-01  Douglas Bates  <bates@stat.wisc.edu>

	* R/zzMethods.R: Removed the .Alias calls.

2001-10-30  Douglas Bates  <bates@stat.wisc.edu>

	* man/pairs.lme.Rd: Modified many documentation files to pass the
	codoc checks.

2001-10-23  Douglas Bates  <bates@stat.wisc.edu>

	* man/ACF.lme.Rd: Modified many, many method definitions and
	documentation files to get them to pass the R-1.4.0 (in
	development) package checking process.

2001-10-08  Douglas Bates  <bates@stat.wisc.edu>

	* R/lmList.R: Fixed definition of logLik.lmList to work with R
	(but it is still rather ugly).

	* R/varFunc.R: Changed definition of logLik.varComb to return a
	logLik object.

2001-10-05  Douglas Bates  <bates@stat.wisc.edu>

	* R/lmList.R: Fixed selection of id[subscripts] in the panel
	function of pairs.lmList (and several other functions) so it does
	not produce a warning from evaluating is.na(NULL).

2001-09-17  Douglas Bates  <bates@stat.wisc.edu>

	* R/nlme.R: Incorporated a change from
	Setzer.Woodrow@epamail.epa.gov for using nested grouping factors
	in nlme.

2001-06-20  Douglas Bates  <bates@stat.wisc.edu>

	* R/varFunc.R: Changes in calling sequences and in documentation
	so the package passes codoc() checks.  These affect many files in
	both the R and the man directory.  No changes of substance.

2001-05-29  Martin Maechler <maechler@stat.math.ethz.ch>

	* R/zzMethods.R: Use .Alias() 
	
	* R/newGenerics.R:  Generic AIC()
	* R/newMethods.R:   logLik.lm()   moved to "base R"
	* man/AIC.Rd,   
	* man/AIC.logLik.Rd: AIC.logLik() and AIC.lm() as well
	* man/logLik.lm.Rd: 

2001-03-28  Douglas Bates  <bates@stat.wisc.edu>

	* R/simulate.R: Modified simulate.lme for default pdMat class of
	pdLogChol.

2001-02-24  Douglas Bates  <bates@stat.wisc.edu>
